# Fleet-Active-Learning

./: .gitignore  CIFAR10_Unc_sims.py  MNIST_Coresets_sims.py  MNIST_Gradient_sims.py  MNIST_Unc_sims.py  README.md  Run_Stat_ML.py  Sim.py  SimDeepDrive.py  Sim_Detect.py  Sim_FL.py  Sim_Random.py  Sim_deepdrive.py  Sim_optimize_sim.py  Sim_optuna (1).py  Sim_optuna.py  combine_sims.py  convert_yaml_to_json.py  convertjson2yolo.py  create_adversarial_dataset.py  create_clip_emb.py  create_clip_emb_1.py  create_clip_emb_2.py  create_clip_emb_3.py  create_distance_metrics.py  create_tsne_visualizations.py  environment.yml  expanded.sh  large_mnist_train.py  load_detection_labels.py  make_example.py  make_legend.py  make_plots.py  make_random_legend.py  obtain_resnet_embs copy.py  obtain_resnet_embs.py  obtain_resnet_embs1.py  obtain_resnet_embs2.py  plot_accs.py  pyproject.toml  (+6 more)
configs/: adverseweather.json  adverseweather_fl.json  bla.txt  cifar10.json  cifar10_fl.json  create_YOLO_labels_deepdrive.json  create_labels_adverseweather.json  deepdrive.json  deepdrive_detection.json  deepdrive_fl.json  deepdrive_test.json  mnist.json  mnist_fl.json
dataset_utils/: dataset_utils.py
model_utils/: mnist.py  model_utils.py  unc_utils.py
run_exps/: create_YOLO_labels_deepdrive.sh  create_labels_adverseweather.sh  run_adverseweather.sh  run_adverseweather_fl.sh  run_cifar10.sh  run_cifar10_fl.sh  run_deepdrive.sh  run_deepdrive_detection.sh  run_deepdrive_fl.sh  run_mnist.sh  run_mnist_fl.sh
src/: Sim.py  Sim_Detect.py  create_YOLO_labels_deepdrive.py  (+1 more)
utils/: BBALD.py  (+13 more)
(+94 files in other folders)
